8/18/2004   version 0.2 pre19   Ian Lewis <IanLewis@member.fsf.org>

    * Fixed a bug with reloading a document in the source view.
    * Fixed a bug that caused a document to be loaded dirty because the fact
      that it was dirty was saved to the recent files list

8/12/2004   version 0.2 pre18   Ian Lewis <IanLewis@member.fsf.org>

    * The OptionsPanel now extends the EnhancedDialog class. This makes it so
      the Options dialog responds to the escape and enter keys.
    * Fixed bug where when documents are opened but not viewed the split pane
      locations in the default view are set to zero so when you open it the
      next time the panes are messed up
    * Added logic to start editing in the tree if the user starts typing while
      one of the nodes is selected. It moves focus to the right hand pane
      if necessary. It does, however, lose the first key when you start typing.
    * The Move No Drop cursor is now displayed when dragging a node over a
      drop target that rejects it.
    * The SourceView search and replace dialog now closes if you change views.
      The sourceview also reuses the dialog if it's open already when you hit
      the find menu item.

8/11/2004   version 0.2 pre17   Ian Lewis <IanLewis@member.fsf.org>

    * Added back the replace field on the find and replace dialog in the
      source view but this time it works!
    * The source view now selects the text correctly in Linux when you do a
      find without first setting focus to the text area.
    * Removed the Find Next menu item since it doesn't work yet.
    * Lengthened the max length of text displayed in the tree for a text node.

08/10/2004  version 0.2 pre16   Ian Lewis <IanLewis@member.fsf.org>

    * Removed code in the TabbedView that assumed that the DocumentView was
      the same reference as the document view component.
    * Made the search dialog get the parent frame so it works better now.
    * Removed the replace field since it doesn't work.
