@@ -3,6 +3,7 @@
     * Fixed a bug with reloading a document in the source view.
     * Fixed a bug that caused a document to be loaded dirty because the fact
       that it was dirty was saved to the recent files list
+    * Added ability to create and edit processing instruction nodes
 
 8/12/2004   version 0.2 pre18   Ian Lewis <IanLewis@member.fsf.org>
 
